--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.TodoApp"
     android:versionCode="1"
     android:versionName="1.0" >
-     <uses-permission android:name="android.permission.INTERNET" /> 
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
@@ -21,17 +22,19 @@
         <activity
             android:name="com.example.TodoApp.TodoHome"
             android:label="@string/app_name" >
-            
         </activity>
         <activity
             android:name="com.example.TodoApp.LoginActivity"
             android:label="@string/title_activity_login" >
-            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.TodoApp.AddTaskActivity"
+            android:label="@string/title_activity_add_task" >
         </activity>
     </application>
 
